--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     //GLide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    //Cardview
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
